# test_task_0

./: LICENSE  Zadanie_Python_Jun.txt
SocioPath/: README.md  __init__.py  main.py  pyproject.toml
SocioPath/configuration/: server.py
SocioPath/configuration/routes/: __init__.py  routes.py
SocioPath/db/: BaseEngine.py
SocioPath/internal/routes/: news.py  users.py
SocioPath/models/: models.py
SocioPath/schemas/: schemas.py
SocioPath/sociopath/: newsClass.py
