[tool.poetry]
name = "sociopath"
version = "0.1.0"
description = ""
authors = ["Vasil Stepanov <48417218+Alpha787@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.98.0"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
