[tool.poetry]
name = "sociopath"
version = "0.1.0"
description = ""
authors = ["Vasil Stepanov <48417218+Alpha787@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.4"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"
asyncpg = "^0.27.0"
sqlalchemy = "^2.0.17"
alembic = "^1.11.1"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
